name:                servant-static
version:             0.1.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

  exposed-modules: Servant.Server.Embedded.TH,
                   Servant.Server.Embedded.Types,
                   Servant.Server.Embedded.Files,
                   Servant.Server.Embedded.CSS,
                   Servant.Server.Embedded.Ghcjs,
                   Servant.Server.Embedded

  default-extensions: TemplateHaskell
                      QuasiQuotes
                      OverloadedStrings
                      TupleSections
                      TypeFamilies
                      MagicHash
                      FlexibleContexts
                      DataKinds
                      ScopedTypeVariables
                      FlexibleInstances
                      MultiParamTypeClasses

  build-depends:  base
                , async
                , base64-bytestring
                , blaze-builder
                , byteable
                , bytestring
                , conduit
                , conduit-extra
                , cryptohash
                , directory
                , filepath
                , http-types
                , mime-types
                , process
                , servant
                , servant-server
                , template-haskell
                , text
                , wai
                , zlib
