cabal-version:      3.0
name:               servant
version:            0.20.2
synopsis:           A family of combinators for defining webservices APIs
category:           Servant, Web
description:
  A family of combinators for defining webservices APIs and serving them
  .
  You can learn about the basics in the <http://docs.servant.dev/en/stable/tutorial/index.html tutorial>.
  .
  <https://github.com/haskell-servant/servant/blob/master/servant/CHANGELOG.md CHANGELOG>

homepage:           http://docs.servant.dev/
bug-reports:        http://github.com/haskell-servant/servant/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Servant Contributors
maintainer:         haskell-servant-maintainers@googlegroups.com
copyright:
  2014-2016 Zalora South East Asia Pte Ltd, 2016-2019 Servant Contributors

build-type:         Simple
tested-with:
  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.6.4 || ==9.8.2 || ==9.10.1

extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: http://github.com/haskell-servant/servant.git

common extensions
  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NoStarIsType
    OverloadedLabels
    OverloadedStrings
    PackageImports
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  default-language:   Haskell2010

common ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fdicts-strict
    -Wno-unticked-promoted-constructors -Werror=unused-imports
    -Wunused-packages

library
  import:          extensions
  import:          ghc-options
  exposed-modules:
    Servant.API
    Servant.API.Alternative
    Servant.API.BasicAuth
    Servant.API.Capture
    Servant.API.ContentTypes
    Servant.API.Description
    Servant.API.Empty
    Servant.API.Experimental.Auth
    Servant.API.Fragment
    Servant.API.Generic
    Servant.API.Header
    Servant.API.HttpVersion
    Servant.API.IsSecure
    Servant.API.Modifiers
    Servant.API.NamedRoutes
    Servant.API.QueryParam
    Servant.API.QueryString
    Servant.API.Raw
    Servant.API.RemoteHost
    Servant.API.ReqBody
    Servant.API.ResponseHeaders
    Servant.API.Status
    Servant.API.Stream
    Servant.API.Sub
    Servant.API.TypeErrors
    Servant.API.TypeLevel
    Servant.API.UVerb
    Servant.API.UVerb.Union
    Servant.API.Vault
    Servant.API.Verbs
    Servant.API.WithNamedContext
    Servant.API.WithResource

  -- Types
  exposed-modules: Servant.Types.SourceT

  -- Test stuff
  exposed-modules: Servant.Test.ComprehensiveAPI

  -- Safe links
  exposed-modules: Servant.Links

  -- Bundled with GHC: Lower bound to not force re-installs
  -- text and mtl are bundled starting with GHC-8.4
  --
  -- note: mtl lower bound is so low because of GHC-7.8
  build-depends:
    , base          >=4.14     && <4.21
    , bytestring    >=0.10.8.1 && <0.13
    , constraints   >=0.2
    , containers    >=0.6      && <0.8
    , mtl           ^>=2.2.2   || ^>=2.3.1
    , sop-core      >=0.4.0.0  && <0.6
    , text          >=1.2.3.0  && <2.2
    , transformers  >=0.5.2.0  && <0.7

  -- We depend (heavily) on the API of these packages:
  -- i.e. re-export, or allow using without direct dependency
  build-depends:
    , http-api-data   >=0.4.1 && <0.7
    , singleton-bool  >=0.1.4 && <0.2

  -- Other dependencies: Lower bound around what is in the latest Stackage LTS.
  -- Here can be exceptions if we really need features from the newer versions.
  build-depends:
    , aeson             >=1.4.1.0  && <2.3
    , attoparsec        >=0.13.2.2 && <0.15
    , bifunctors        >=5.5.3    && <5.7
    , case-insensitive  >=1.2.0.11 && <1.3
    , deepseq           >=1.4.2.0  && <1.6
    , http-media        >=0.7.1.3  && <0.9
    , http-types        >=0.12.2   && <0.13
    , mmorph            >=1.1.2    && <1.3
    , network-uri       >=2.6.1.0  && <2.7
    , QuickCheck        >=2.12.6.1 && <2.16
    , vault             >=0.3.1.2  && <0.4

  hs-source-dirs:  src

test-suite spec
  import:             extensions
  import:             ghc-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:
    Servant.API.ContentTypesSpec
    Servant.API.ResponseHeadersSpec
    Servant.API.StreamSpec
    Servant.LinksSpec

  -- Dependencies inherited from the library. No need to specify bounds.
  build-depends:
    , aeson
    , base
    , bytestring
    , http-media
    , mtl
    , servant
    , text

  -- Additional dependencies
  build-depends:
    , hspec                 >=2.6.0    && <2.12
    , QuickCheck            >=2.12.6.1 && <2.16
    , quickcheck-instances  >=0.3.19   && <0.4

  build-tool-depends: hspec-discover:hspec-discover >=2.6.0 && <2.12
