name:                tutorial
version:             0.10
synopsis:            The servant tutorial
description:
  The servant tutorial can be found at
  <http://haskell-servant.readthedocs.org/>
homepage:            http://haskell-servant.readthedocs.org/
category:            Servant, Documentation
license:             BSD3
license-file:        LICENSE
author:              Servant Contributors
maintainer:          haskell-servant-maintainers@googlegroups.com
build-type:          Simple
cabal-version:       >=1.10
tested-with:
  GHC==7.8.4
  GHC==7.10.3
  GHC==8.0.2
  GHC==8.2.2
extra-source-files:
  static/index.html
  static/ui.js

library
  exposed-modules:     ApiType
                     , Authentication
                     , Client
                     , Docs
                     , Javascript
                     , Server
  build-depends:       base == 4.*
                     , base-compat
                     , text
                     , aeson
                     , aeson-compat
                     , blaze-html
                     , directory
                     , blaze-markup
                     , containers
                     , servant == 0.12.*
                     , servant-server == 0.12.*
                     , servant-client == 0.12.*
                     , servant-docs >= 0.11.1 && <0.12
                     , servant-js >= 0.9 && <0.10
                     , warp
                     , http-api-data
                     , http-media
                     , lucid
                     , time
                     , string-conversions
                     , bytestring
                     , attoparsec
                     , mtl >=2.1 && <2.3
                     , mtl-compat
                     , random
                     , js-jquery
                     , wai
                     , http-types
                     , transformers
                     , markdown-unlit >= 0.4
                     , http-client
                     , cookie
  default-language:    Haskell2010
  ghc-options:         -Wall -pgmL markdown-unlit
  build-tool-depends: markdown-unlit:markdown-unlit

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules: JavascriptSpec
  build-tool-depends:
    hspec-discover:hspec-discover
  build-depends: base == 4.*
               , tutorial
               , hspec
               , hspec-wai
               , string-conversions
